tests/golden/error/undefined_var_hints.tg
// Golden test: undefined variable with diagnostic hints (ADR 21.4.26h)
fn main() -> Nat {
    x
}
